tests/integration/security/sds_egress/testdata/istio-mutual-gateway-bing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: https
        protocol: HTTPS
      hosts:
        - bing.com
      tls:
        mode: ISTIO_MUTUAL
